REGRESSION (r253875?): Element styles incorrect after media query evaluation changes https://bugs.webkit.org/show_bug.cgi?id=211505 <rdar://problem/62983242>

Reviewed by Zalan Bujtas.

Source/WebCore:

If there are keyframe rules in media queries we fall back to wiping the style resolver when
something changes. This fallback code didn't work correctly when a rule flipped from matching
to non-matching because MediaQueryCollector bailed out and didn't create DynamicMediaQueryRules
structure needed to detect something has changed.

Test: fast/media/media-query-dynamic-with-keyframes.html

* style/RuleSet.cpp:
(WebCore::Style::RuleSet::addChildRules):
(WebCore::Style::RuleSet::addRulesFromSheet):

Call both push and pop even when the rule doesn't match.

(WebCore::Style::RuleSet::MediaQueryCollector::pushAndEvaluate):

Collect the MediaQuerySet in non-matching case too.

(WebCore::Style::RuleSet::MediaQueryCollector::pop):

Record the DynamicMediaQueryRules when resolving all rules statically.

LayoutTests:

* fast/media/media-query-dynamic-with-keyframes-expected.html: Added.
* fast/media/media-query-dynamic-with-keyframes.html: Added.


Canonical link: https://commits.webkit.org/225624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262618 268f45cc-cd09-0410-ab3c-d52691b4dbfc